code refactor change in completed and important task backend and completed the intregration in front end also

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,3 +176,12 @@ body {
     --rdp-weekday-padding: 8px;
   }
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #002D74;
+  border-radius: 5px;
+}
